--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+#### v0.4.6 - 2014/08/xx
+* Created jar.FileBookmarks.
+
+
 #### v0.4.5 - 2014/08/27
 * Created type Downloadable.
 * Renamed Browser.Write() to Browser.Download().
