Updated change log

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,5 @@
 #### v0.4.6 - 2014/08/xx
-* Created jar.FileBookmarks.
+* Created jar.FileBookmarks for saving bookmarks to a file.
 
 
 #### v0.4.5 - 2014/08/27
