HUGE break up of packages and renaming types

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 #### v0.4.6 - 2014/08/xx
+* Broke up the packages to be more organized.
 * Created jar.FileBookmarks for saving bookmarks to a file.
 
 
